Disable edit mode in QTablewidget

--- a/Resources/ui/main_window.ui
+++ b/Resources/ui/main_window.ui
@@ -22,6 +22,9 @@
         <property name="sizeAdjustPolicy">
          <enum>QAbstractScrollArea::AdjustToContents</enum>
         </property>
+        <property name="editTriggers">
+         <set>QAbstractItemView::NoEditTriggers</set>
+        </property>
         <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
          <bool>false</bool>
         </attribute>
