--- a/Resources/ui/main_window.ui
+++ b/Resources/ui/main_window.ui
@@ -83,7 +83,7 @@
     <property name="title">
      <string>&amp;Menu</string>
     </property>
-    <addaction name="actionOpen_Task"/>
+    <addaction name="actionOpen_Records"/>
     <addaction name="actionQuit"/>
    </widget>
    <widget class="QMenu" name="menuSettings">
@@ -113,9 +113,9 @@
     <string>&amp;Quit</string>
    </property>
   </action>
-  <action name="actionOpen_Task">
+  <action name="actionOpen_Records">
    <property name="text">
-    <string>&amp;Open Task</string>
+    <string>&amp;Open Records</string>
    </property>
   </action>
   <action name="actionToggleLight">
