--- a/Resources/ui/student_window.ui
+++ b/Resources/ui/student_window.ui
@@ -15,20 +15,6 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
-    <widget class="QLabel" name="name_label">
-     <property name="text">
-      <string>TextLabel</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="push_me">
-     <property name="text">
-      <string>PushButton</string>
-     </property>
-    </widget>
-   </item>
-   <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QPlainTextEdit" name="diff_ptextexit">
@@ -57,6 +43,13 @@
       </widget>
      </item>
     </layout>
+   </item>
+   <item>
+    <widget class="QPushButton" name="close_btn">
+     <property name="text">
+      <string>OK</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
