--- a/Resources/ui/student_window.ui
+++ b/Resources/ui/student_window.ui
@@ -6,55 +6,91 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1132</width>
+    <width>1032</width>
     <height>771</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Lupv</string>
+   <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
-   <item>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
+    <widget class="QSplitter" name="splitter_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <widget class="QSplitter" name="splitter">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <widget class="QGroupBox" name="groupBox">
+       <property name="title">
+        <string>GroupBox</string>
+       </property>
+      </widget>
+      <widget class="QTreeWidget" name="all_windows_tw">
+       <column>
+        <property name="text">
+         <string notr="true">All Windows</string>
+        </property>
+       </column>
+      </widget>
+      <widget class="QTreeWidget" name="file_tw">
+       <column>
+        <property name="text">
+         <string notr="true">File</string>
+        </property>
+       </column>
+      </widget>
+      <widget class="QPlainTextEdit" name="diff_pte"/>
+     </widget>
+     <widget class="QTreeWidget" name="log_tw">
+      <column>
+       <property name="text">
+        <string>Name</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Machine</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>New Column</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>SHA</string>
+       </property>
+      </column>
+     </widget>
+    </widget>
+   </item>
+   <item row="1" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QPlainTextEdit" name="diff_ptextexit">
-       <property name="readOnly">
-        <bool>true</bool>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="close_btn">
+       <property name="text">
+        <string>OK</string>
        </property>
       </widget>
      </item>
-     <item>
-      <widget class="QTreeWidget" name="log_tree">
-       <column>
-        <property name="text">
-         <string notr="true">Name</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Machine</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Bar</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>SHA</string>
-        </property>
-       </column>
-      </widget>
-     </item>
     </layout>
-   </item>
-   <item>
-    <widget class="QPushButton" name="close_btn">
-     <property name="text">
-      <string>OK</string>
-     </property>
-    </widget>
    </item>
   </layout>
  </widget>
