Add ability to display focused window
- fix wrong diff show argument

--- a/Resources/ui/student_window.ui
+++ b/Resources/ui/student_window.ui
@@ -175,7 +175,7 @@
        </property>
        <column>
         <property name="text">
-         <string notr="true">All Windows</string>
+         <string notr="true">Windows</string>
         </property>
        </column>
       </widget>
