--- a/lupv/Resources/ui/student_window.ui
+++ b/lupv/Resources/ui/student_window.ui
@@ -31,6 +31,12 @@
      </item>
      <item>
       <widget class="QPushButton" name="close_btn">
+       <property name="minimumSize">
+        <size>
+         <width>10</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="text">
         <string>OK</string>
        </property>
@@ -203,12 +209,7 @@
      <widget class="QTreeWidget" name="log_tw">
       <column>
        <property name="text">
-        <string>Name</string>
-       </property>
-      </column>
-      <column>
-       <property name="text">
-        <string>Machine</string>
+        <string>Relative Time</string>
        </property>
       </column>
       <column>
