Enable sorting in log_tw QTreewidget

--- a/lupv/Resources/ui/student_window.ui
+++ b/lupv/Resources/ui/student_window.ui
@@ -213,6 +213,9 @@
         <height>16777215</height>
        </size>
       </property>
+      <property name="sortingEnabled">
+       <bool>true</bool>
+      </property>
       <column>
        <property name="text">
         <string>Relative Time</string>
