First skeleton of editdistance_view

--- a/lupv/Resources/ui/student_window.ui
+++ b/lupv/Resources/ui/student_window.ui
@@ -30,6 +30,13 @@
       </spacer>
      </item>
      <item>
+      <widget class="QPushButton" name="show_ed_btn">
+       <property name="text">
+        <string>Show Edit Distance</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="close_btn">
        <property name="minimumSize">
         <size>
