--- a/lupv/Resources/ui/main_window.ui
+++ b/lupv/Resources/ui/main_window.ui
@@ -6,67 +6,259 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>890</width>
-    <height>768</height>
+    <width>1092</width>
+    <height>875</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Lupv</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout_2">
+   <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
-       <widget class="QTableWidget" name="tableWidget">
-        <property name="sizeAdjustPolicy">
-         <enum>QAbstractScrollArea::AdjustToContents</enum>
-        </property>
-        <property name="editTriggers">
-         <set>QAbstractItemView::NoEditTriggers</set>
-        </property>
-        <property name="sortingEnabled">
-         <bool>true</bool>
-        </property>
-        <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
-         <bool>true</bool>
-        </attribute>
-        <attribute name="horizontalHeaderStretchLastSection">
-         <bool>true</bool>
-        </attribute>
-        <column>
-         <property name="text">
-          <string>Nama</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>NIM</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>Records</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>Work Durations</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>First Record</string>
-         </property>
-        </column>
-        <column>
-         <property name="text">
-          <string>Last Record</string>
-         </property>
-        </column>
-       </widget>
-      </item>
-     </layout>
+     <widget class="QStackedWidget" name="stackedWidget">
+      <property name="currentIndex">
+       <number>1</number>
+      </property>
+      <widget class="QWidget" name="page">
+       <layout class="QVBoxLayout" name="verticalLayout_2">
+        <item>
+         <layout class="QVBoxLayout" name="verticalLayout">
+          <item>
+           <widget class="QTableWidget" name="tableWidget">
+            <property name="sortingEnabled">
+             <bool>true</bool>
+            </property>
+            <attribute name="horizontalHeaderStretchLastSection">
+             <bool>true</bool>
+            </attribute>
+            <attribute name="verticalHeaderStretchLastSection">
+             <bool>false</bool>
+            </attribute>
+            <column>
+             <property name="text">
+              <string>Name</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>NIM</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Total Records</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Work Duration</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>First Record</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Last Record</string>
+             </property>
+            </column>
+           </widget>
+          </item>
+         </layout>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="page_2">
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="1" column="0">
+         <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <item>
+           <spacer name="horizontalSpacer">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item>
+           <widget class="QPushButton" name="to_mainview_btn">
+            <property name="minimumSize">
+             <size>
+              <width>100</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>OK</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item row="0" column="0">
+         <widget class="QSplitter" name="log_splitter">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <widget class="QSplitter" name="activity_splitter">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <widget class="QGroupBox" name="groupBox">
+            <property name="minimumSize">
+             <size>
+              <width>200</width>
+              <height>100</height>
+             </size>
+            </property>
+            <property name="title">
+             <string>Activity Info</string>
+            </property>
+            <widget class="QLabel" name="machine_const_lbl">
+             <property name="geometry">
+              <rect>
+               <x>10</x>
+               <y>60</y>
+               <width>71</width>
+               <height>16</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Machine:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             </property>
+            </widget>
+            <widget class="QLabel" name="name_lbl">
+             <property name="geometry">
+              <rect>
+               <x>80</x>
+               <y>30</y>
+               <width>101</width>
+               <height>16</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+            <widget class="QLabel" name="machine_lbl">
+             <property name="geometry">
+              <rect>
+               <x>80</x>
+               <y>60</y>
+               <width>101</width>
+               <height>16</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+            <widget class="QLabel" name="ip_const_lbl">
+             <property name="geometry">
+              <rect>
+               <x>190</x>
+               <y>30</y>
+               <width>91</width>
+               <height>16</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;IP Address:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             </property>
+            </widget>
+            <widget class="QLabel" name="ip_lbl">
+             <property name="geometry">
+              <rect>
+               <x>290</x>
+               <y>30</y>
+               <width>101</width>
+               <height>16</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+            <widget class="QLabel" name="name_const_lbl">
+             <property name="geometry">
+              <rect>
+               <x>10</x>
+               <y>30</y>
+               <width>59</width>
+               <height>14</height>
+              </rect>
+             </property>
+             <property name="text">
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Name:&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             </property>
+            </widget>
+           </widget>
+           <widget class="QTreeWidget" name="all_windows_tw">
+            <column>
+             <property name="text">
+              <string notr="true">Windows</string>
+             </property>
+            </column>
+           </widget>
+           <widget class="QTreeWidget" name="file_tw">
+            <column>
+             <property name="text">
+              <string notr="true">Files</string>
+             </property>
+            </column>
+           </widget>
+           <widget class="QPlainTextEdit" name="diff_pte">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>400</height>
+             </size>
+            </property>
+           </widget>
+          </widget>
+          <widget class="QTreeWidget" name="log_tw">
+           <property name="sortingEnabled">
+            <bool>true</bool>
+           </property>
+           <column>
+            <property name="text">
+             <string notr="true">Relative Time</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Date Time</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>SHA</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Line Insertions</string>
+            </property>
+           </column>
+           <column>
+            <property name="text">
+             <string>Line Deletions</string>
+            </property>
+           </column>
+          </widget>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </widget>
     </item>
    </layout>
   </widget>
@@ -75,28 +267,21 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>890</width>
+     <width>1092</width>
      <height>19</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuMenu">
+   <widget class="QMenu" name="menuFile">
     <property name="title">
-     <string>&amp;Menu</string>
+     <string>Fi&amp;le</string>
     </property>
     <addaction name="actionOpen_Records"/>
     <addaction name="actionQuit"/>
    </widget>
    <widget class="QMenu" name="menuSettings">
     <property name="title">
-     <string>Setti&amp;ngs</string>
+     <string>Settin&amp;gs</string>
     </property>
-    <widget class="QMenu" name="menuThemes">
-     <property name="title">
-      <string>&amp;Themes</string>
-     </property>
-     <addaction name="actionToggleLight"/>
-     <addaction name="actionToggleDark"/>
-    </widget>
     <widget class="QMenu" name="menuDateTime_Format">
      <property name="title">
       <string>&amp;DateTime Format</string>
@@ -104,26 +289,56 @@
      <addaction name="actionRelativeDate"/>
      <addaction name="actionRealDate"/>
     </widget>
+    <widget class="QMenu" name="menuThemes">
+     <property name="title">
+      <string>&amp;Themes</string>
+     </property>
+     <addaction name="separator"/>
+     <addaction name="separator"/>
+     <addaction name="actionToggleLight"/>
+     <addaction name="actionToggleDark"/>
+    </widget>
     <addaction name="menuThemes"/>
     <addaction name="menuDateTime_Format"/>
    </widget>
-   <addaction name="menuMenu"/>
+   <widget class="QMenu" name="menuAnalyze">
+    <property name="title">
+     <string>Analy&amp;ze</string>
+    </property>
+    <widget class="QMenu" name="menuStatistic">
+     <property name="title">
+      <string>Stat&amp;istic</string>
+     </property>
+     <addaction name="separator"/>
+     <addaction name="separator"/>
+     <addaction name="actionShow_stats"/>
+     <addaction name="actionHide_stats"/>
+    </widget>
+    <widget class="QMenu" name="menuSHA">
+     <property name="title">
+      <string>S&amp;HA</string>
+     </property>
+     <addaction name="actionShow_SHA"/>
+     <addaction name="actionHide_SHA"/>
+    </widget>
+    <addaction name="separator"/>
+    <addaction name="actionShow_Editdistance"/>
+    <addaction name="menuSHA"/>
+    <addaction name="menuStatistic"/>
+   </widget>
+   <addaction name="menuFile"/>
    <addaction name="menuSettings"/>
+   <addaction name="menuAnalyze"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
-  <action name="actionLoad_Task">
+  <action name="actionOpen_Records">
    <property name="text">
-    <string>Load Task</string>
+    <string>&amp;Open Records</string>
    </property>
   </action>
   <action name="actionQuit">
    <property name="text">
     <string>&amp;Quit</string>
-   </property>
-  </action>
-  <action name="actionOpen_Records">
-   <property name="text">
-    <string>&amp;Open Records</string>
    </property>
   </action>
   <action name="actionToggleLight">
@@ -144,6 +359,31 @@
   <action name="actionRealDate">
    <property name="text">
     <string>R&amp;eal</string>
+   </property>
+  </action>
+  <action name="actionShow_Editdistance">
+   <property name="text">
+    <string>&amp;Show Editdistance</string>
+   </property>
+  </action>
+  <action name="actionShow_SHA">
+   <property name="text">
+    <string>&amp;Show SHA</string>
+   </property>
+  </action>
+  <action name="actionHide_SHA">
+   <property name="text">
+    <string>&amp;Hide SHA</string>
+   </property>
+  </action>
+  <action name="actionShow_stats">
+   <property name="text">
+    <string>&amp;Show stats</string>
+   </property>
+  </action>
+  <action name="actionHide_stats">
+   <property name="text">
+    <string>&amp;Hide stats</string>
    </property>
   </action>
  </widget>
